sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

for(i=0 to length-1)
{
	if (plusPetit(i,j)){
		echange(i,j)
	}
}

}
